[gd_scene load_steps=11 format=2]

[ext_resource path="res://core/utils/KeyLabel.gd" type="Script" id=2]
[ext_resource path="res://core/audio_bus_level_controllers/AudioSettingsHUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://core/utils/ButtonKey.tscn" type="PackedScene" id=4]
[ext_resource path="res://interface/menus/GraphicsMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://interface/input_mapper/InputMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://interface/main_menu/Settings.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
resource_name = "start"
length = 0.001

[sub_resource type="Animation" id=2]
resource_name = "submenu_transition_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("../BlackBackground:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.225312, 0.287174 ),
"update": 0,
"values": [ Vector2( 160, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../BlackBackground:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.225312, 0.287174 ),
"update": 0,
"values": [ Vector2( 1600, 1080 ), Vector2( 680, 1080 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../WhiteBackground:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.435275, 0.435275 ),
"update": 0,
"values": [ Vector2( 240, 0 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../WhiteBackground:rect_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.435275, 0.435275 ),
"update": 0,
"values": [ Vector2( 1440, 1080 ), Vector2( 640, 1080 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 240, 32 ), Vector2( 32, 32 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:rect_size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1440, 1016 ), Vector2( 576, 1016 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath(".:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "submenu_transition_out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("../BlackBackground:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.287174, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 160, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../BlackBackground:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.287174, 1 ),
"update": 0,
"values": [ Vector2( 680, 1080 ), Vector2( 1600, 1080 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../WhiteBackground:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.435275, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 240, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../WhiteBackground:rect_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.435275, 1 ),
"update": 0,
"values": [ Vector2( 640, 1080 ), Vector2( 1440, 1080 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 32, 32 ), Vector2( 240, 32 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:rect_size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 576, 1016 ), Vector2( 1440, 1016 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath(".:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "transition_out"
length = 0.001

[node name="SettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -1312.0
margin_bottom = -32.0
mouse_filter = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsLabel" type="Label" parent="."]
anchor_right = 1.0
margin_top = 150.0
margin_bottom = 218.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Settings"
align = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Buttons"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="BoxContainer" type="VBoxContainer" parent="Buttons"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -142.0
margin_bottom = 142.0
mouse_filter = 2
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" parent="Buttons/BoxContainer" instance=ExtResource( 4 )]
margin_right = 576.0
margin_bottom = 20.0
text = "AUDIO"

[node name="Controls" parent="Buttons/BoxContainer" instance=ExtResource( 4 )]
margin_top = 36.0
margin_right = 576.0
margin_bottom = 56.0
text = "CONTROLS"

[node name="Graphics" parent="Buttons/BoxContainer" instance=ExtResource( 4 )]
margin_top = 72.0
margin_right = 576.0
margin_bottom = 92.0
text = "GRAPHICS"

[node name="BackButton" parent="Buttons/BoxContainer" instance=ExtResource( 4 )]
margin_top = 108.0
margin_right = 576.0
margin_bottom = 128.0
text = "BACK"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/start = SubResource( 1 )
anims/submenu_transition_in = SubResource( 2 )
anims/submenu_transition_out = SubResource( 3 )
anims/transition_out = SubResource( 4 )

[node name="AudioSettingsHUD" parent="." instance=ExtResource( 3 )]
visible = false
margin_top = 152.0
margin_bottom = -141.0

[node name="InputMenu" parent="." instance=ExtResource( 6 )]
visible = false

[node name="GraphicsMenu" parent="." instance=ExtResource( 5 )]
visible = false
[connection signal="pressed" from="Buttons/BoxContainer/Audio" to="." method="_on_Audio_pressed"]
[connection signal="pressed" from="Buttons/BoxContainer/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="Buttons/BoxContainer/Graphics" to="." method="_on_Graphics_pressed"]
[connection signal="pressed" from="Buttons/BoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="finished" from="AudioSettingsHUD" to="." method="_on_AudioSettingsHUD_finished"]
[connection signal="finished" from="InputMenu" to="." method="_on_InputMenu_finished"]
[connection signal="finished" from="GraphicsMenu" to="." method="_on_GraphicsMenu_finished"]
